Changelog
=========

2.2.dev0 - (unreleased)
-----------------------
* Change: re-labeled search facets.
  [demarant] 

2.1 - (2015-02-16)
------------------
* Feature: started adding Air Quality statistics
  [szabozo0 refs #21931]

2.0 - (2015-01-22)
------------------
* Feature: added initial document on how to create new catalog applications
  [szabozo0 refs #21931]

1.9 - (2014-12-23)
------------------
* Change: editorial updates to the PAM application
  [demarant refs #21454]

1.8 - (2014-11-20)
------------------
* Change: mark new egg release
  [ghicaale refs #21453]

1.7 - (2014-11-20)
------------------
* Feature: Added diacritics support
  [pasoviul refs #21415]
* Bugfix: removed wildcard from search box
  [pasoviul refs #21415]
* Feature: Added checkbox option to facets
  [pasoviul refs #21412]

1.6 - (2014-10-15)
------------------
* Bug fix: Removed all references of QuickEvent
  [pasoviul refs #21123]

1.5 - (2014-07-15)
------------------
* Feature: Changed title display
  [pasoviul refs #18190]

1.4 - (2014-06-30)
------------------
* Feature: Added support for predefined operators
  [pasoviul refs #20005]

1.3 - (2014-06-10)
------------------
* Feature: Added support for hierarchic facets
  [pasoviul refs #18878]

1.2 - (2014-05-13)
------------------
* Feature: responsive tile design
  [demarant fixes #18710]
* Bug fix: hide deleted resources
  [pasoviul refs #18500]

1.1 - (2014-02-13)
------------------
* Bug fix: properly escape title in advanced search album view
  [demarant refs #16693]
* Bug fix: removed wrongly added blockquotes within README.rst
  [ichim-david refs #18064]

1.0 - (2013-09-20)
------------------
- Initial release
  [mihneasim]
