@@ -21,6 +21,8 @@ $(function($) {
         'Indicator Specification' : [],
         'Indicator factsheet' : [],
         'Indicator assessment' : [],
+        'Infographic' : [],
+        'Briefing' : [],
         'Page': [],
         'Link' : [],
         'Data File' : [],
@@ -33,6 +35,7 @@ $(function($) {
         'Eyewitness story' : [],
         'Figure' : [],
         'File' : [],
+        'Folder' : [],
         'GIS Map Application' : [],
         'Methodology Reference' : [],
         'Organization' : [],
@@ -40,6 +43,7 @@ $(function($) {
         'Rationale Reference' : [],
         'SOER Key fact' : [],
         'SOER Message' : [],
+        'SPARQL' : [],
         'Speech' : [],
         'Text' : [],
         'Work Item' : []
