@@ -3,6 +3,8 @@ Changelog
 
 2.2.dev0 - (unreleased)
 -----------------------
+* Feature: added more types for eea_search
+  [demarant]
 * Change: re-labeled search facets.
   [demarant] 
 
